llm/ollama/gateway/istio_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ollama-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ollama
spec:
  hosts:
  - "*"
  gateways:
  - ollama-gateway
  http:
  - match:
    - uri:
        exact: /api/generate
    - uri:
        exact: /api/chat
    - uri:
        prefix: /api
    route:
    - destination:
        host: ollama
        port:
          number: 11434
